[package]
name = "scotext"
version = "0.5.0"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
description = "CLI app to score input according to how likely it is it contains english text"
license = "MIT"
homepage = "https://github.com/gavynriebau/scotext"
repository = "https://github.com/gavynriebau/scotext"

[dependencies]
clap = "2.23.3"
log = "0.3.7"
env_logger = "0.4.2"
xor-utils = "0.5.0"
